# test-multipart

./: .gitignore  WORKSPACE  readme.md  reset.bat
backup-noneedtoclick/client/: client.go  client_original.go
backup-noneedtoclick/client2/: client2.go
backup-noneedtoclick/server/: server2.go
client/: BUILD.bazel  client.go  client_backup.go  clientsimple.go  reset.bat
client2/: client.go
server/: BUILD.bazel  reset.bat  server.go  server2.go  serversimple.go  testserver1.txt  testserver2.txt
server2/: server.go
