load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["client.go"],
    importpath = "github.com/example/project/client",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "client",
    data = glob(["*.txt"]),
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
